<resources>
    <string name="app_name">Covid19</string>
    <string name="todays_status">Today\'s Status</string>
    <string name="news">News</string>
    <string name="setting">Setting</string>
    <string name="stay_safe_from_covid_19">Stay Safe from COVID-19</string>
    <string name="avoid_close_contact">\u2022 Avoid close contact</string>
    <string name="wear_a_facemask">\u2022 Wear a facemask</string>
    <string name="use_handwash_clean_your_hands_often">\u2022 Use handwash &amp; clean your hands often</string>
    <string name="select_your_country">Select your country</string>
    <string name="country">Country</string>
    <string name="start">start</string>
    <string name="find_out_more_on_staying_safe">Find out more on staying safe</string>
    <string name="total">Total</string>
    <string name="today">Today</string>
    <string name="covid_19_latest_news">COVID-19 Latest News</string>
    <string name="covid_19_statistics">COVID-19 Statistics</string>
    <string name="tests">Tests</string>
    <string name="_0">0</string>
    <string name="recovered">Recovered</string>
    <string name="active">Active</string>
    <string name="critical">Critical</string>
    <string name="death">Death</string>
    <string name="more_link">more link</string>
    <string name="article_title">Article Title</string>
    <string name="article_source">Article Source</string>
    <string name="today_s_cases">Today\'s Cases</string>
    <string name="today_s_deaths">Today\'s Deaths</string>
    <string name="cases">Cases</string>
    <string name="world_s_status">World\'s Status</string>
    <string name="world">World</string>
</resources>
