<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ParentLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleText"
            android:text="@string/covid_19_statistics"/>

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:paddingStart="0dp"-->
<!--            android:paddingEnd="8dp"-->
<!--            android:layout_gravity="bottom"-->
<!--            android:text="@string/world"/>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/world"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/country"
            app:srcCompat="@drawable/ic_earth"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <!--        parent layout for scrollView-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StatusLinearLayout"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:layout_marginTop="6dp"
                    style="@style/StatusTitleText"
                    android:text="@string/today_s_cases"/>

                <TextView
                    android:id="@+id/tvTodayCase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="6dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/_0"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StatusLinearLayout"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:layout_marginTop="6dp"
                    style="@style/StatusTitleText"
                    android:text="@string/today_s_deaths"/>

                <TextView
                    android:id="@+id/tvTodayDeaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="6dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/_0"
                    android:textSize="20sp" />
            </RelativeLayout>

            <!--            Row first-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatusLinearLayout"
                    android:orientation="vertical"
                    android:padding="20sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/StatusTitleText"
                        android:text="@string/tests"/>

                    <TextView
                        android:id="@+id/tvTests"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/StatusNumericText"
                        android:textColor="@color/testsCasesColor"
                        android:text="@string/_0"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatusLinearLayout"
                    android:layout_gravity="end"
                    android:orientation="vertical"
                    android:padding="20sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/StatusTitleText"
                        android:text="@string/cases" />

                    <TextView
                        android:id="@+id/tvCases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/StatusNumericText"
                        android:textColor="@color/casesColor"
                        android:text="@string/_0"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <!--            End of Row first-->

            <!--        Row second-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatusLinearLayout"
                    android:orientation="vertical"
                    android:padding="20sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/StatusTitleText"
                        android:text="@string/active"/>

                    <TextView
                        android:id="@+id/tvActive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/StatusNumericText"
                        android:textColor="@color/activeCasesColor"
                        android:text="@string/_0"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatusLinearLayout"
                    android:layout_gravity="end"
                    android:orientation="vertical"
                    android:padding="20sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/StatusTitleText"
                        android:text="@string/recovered" />

                    <TextView
                        android:id="@+id/tvRecovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/StatusNumericText"
                        android:textColor="@color/recoveredCasesColor"
                        android:text="@string/_0"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <!--            End of Row first-->

            <!--        Row third-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatusLinearLayout"
                    android:orientation="vertical"
                    android:padding="20sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/StatusTitleText"
                        android:text="@string/critical"/>

                    <TextView
                        android:id="@+id/tvCritical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/StatusNumericText"
                        android:textColor="@color/criticalCasesColor"
                        android:text="@string/_0"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/StatusLinearLayout"
                    android:layout_gravity="end"
                    android:orientation="vertical"
                    android:padding="20sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/StatusTitleText"
                        android:text="@string/death" />

                    <TextView
                        android:id="@+id/tvDeath"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/StatusNumericText"
                        android:textColor="@color/deathCasesColor"
                        android:text="@string/_0"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <!--            End of Row third-->

            <!--            Stay safe information-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    style="@style/TitleText"
                    android:text="@string/stay_safe_from_covid_19"
                    android:textColor="@color/md_black_1000" />

                <TextView
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/graphik_medium"
                    android:text="@string/avoid_close_contact"
                    android:textColor="#000000" />

                <TextView
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/graphik_medium"
                    android:text="@string/use_handwash_clean_your_hands_often"
                    android:textColor="#000000" />

                <TextView
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/graphik_medium"
                    android:text="@string/wear_a_facemask"
                    android:textColor="#000000" />

            </LinearLayout>

            <!--            End of Stay safe information-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvFindOutMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="12dp"
                    android:fontFamily="@font/graphik_medium"
                    android:text="@string/find_out_more_on_staying_safe" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/more_link"
                    android:src="@drawable/ic_link"/>

            </LinearLayout>

        </LinearLayout>
        <!--        End of Scrollview layout-->

    </ScrollView>

</LinearLayout>